Fix reference to base template

--- a/src/templates/registration/password_reset_form.html
+++ b/src/templates/registration/password_reset_form.html
@@ -1,4 +1,4 @@
-{% extends "base_generic.html" %}
+{% extends "library/base_generic.html" %}
 
 {% block content %}
   <form action="" method="post">
@@ -6,6 +6,8 @@
   {% if form.email.errors %}
     {{ form.email.errors }}
   {% endif %}
+	  <h1>  Password reset </h1>
+	  <p>Provide the e-mail address that is connected with your account</p>
       <p>{{ form.email }}</p>
     <input type="submit" class="btn btn-default btn-lg" value="Reset password">
   </form>
