--- a/src/templates/registration/password_reset_complete.html
+++ b/src/templates/registration/password_reset_complete.html
@@ -1,4 +1,4 @@
-{% extends "base_generic.html" %}
+{% extends "library/base_generic.html" %}
 
 {% block content %}
   <h1>The password has been changed!</h1>
