--- a/src/templates/registration/password_reset_done.html
+++ b/src/templates/registration/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends "base_generic.html" %}
+{% extends "library/base_generic.html" %}
 
 {% block content %}
   <p>We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</p>
