--- a/src/templates/registration/password_reset_form.html
+++ b/src/templates/registration/password_reset_form.html
@@ -1,4 +1,5 @@
 {% extends "library/base_generic.html" %}
+{% load i18n %}
 
 {% block content %}
   <form action="" method="post">
@@ -6,9 +7,9 @@
   {% if form.email.errors %}
     {{ form.email.errors }}
   {% endif %}
-	  <h1>  Password reset </h1>
-	  <p>Provide the e-mail address that is connected with your account</p>
+	  <h1>  {% translate "Password reset" %} </h1>
+	  <p>{% translate "Provide the e-mail address that is connected with your account" %}</p>
       <p>{{ form.email }}</p>
-    <input type="submit" class="btn btn-default btn-lg" value="Reset password">
+    <input type="submit" class="btn btn-default btn-lg" value={% translate "Reset" %}>
   </form>
 {% endblock %}
