--- a/src/templates/registration/password_reset_complete.html
+++ b/src/templates/registration/password_reset_complete.html
@@ -1,6 +1,7 @@
 {% extends "library/base_generic.html" %}
+{% load i18n %}
 
 {% block content %}
-  <h1>The password has been changed!</h1>
+  <h1>{% translate "The password has been changed!" %}</h1>
   <p><a href="{% url 'login' %}">log in again?</a></p>
 {% endblock %}
