--- a/src/templates/registration/password_reset_done.html
+++ b/src/templates/registration/password_reset_done.html
@@ -1,5 +1,6 @@
 {% extends "library/base_generic.html" %}
+{% load i18n %}
 
 {% block content %}
-  <p>We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</p>
+  <p>{% translate "We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder." %}</p>
   {% endblock %}
